force-app/main/default/objects/Case/fields/AcceptableDocumentQuality__c.field-meta.xml
<CustomField>
    <fullName>AcceptableDocumentQuality__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates if the document submitted by the customer is of the accepted quality</description>
    <inlineHelpText>Check if the image of the identity document captured by the customer is clear, legible and complete: 1) All required fields for a DVS check are visible and manually extracted for data entry, 2) For photographic IDs, the image quality will allow for a reliable selfie match, 3) If applicable for the Document Type provided, the full document has been captured - both front and back. For selfie matching tips, failure scenarios and acceptable exceptions, refer to the procedural guide.</inlineHelpText>
    <label>Acceptable Document Quality?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>