force-app/main/default/objects/Case/fields/AcceptableDocumentType__c.field-meta.xml
<CustomField>
    <fullName>AcceptableDocumentType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates if the document submitted by the customer is of the approved list of documents by the bank</description>
    <label>Acceptable Document Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>