force-app/main/default/objects/Case/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Picklist which determines if the related financial account is using Sole or S2 account</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ Plus &amp; ANZ Save</fullName>
            </value>
            <value>
                <fullName>ANZ Plus Flex Saver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>