force-app/main/default/objects/Case/fields/AcquirerReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>AcquirerReferenceNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Field to capture Acquirer Reference Number from an external system.</description>
    <label>Acquirer Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>