force-app/main/default/objects/Case/fields/Actual_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Actual_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Description of the unexpected behaviour the customer encountered.</description>
    <inlineHelpText>Description of the unexpected behaviour the customer encountered.</inlineHelpText>
    <label>Actual Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>