force-app/main/default/objects/Case/fields/Additional_Type__c.field-meta.xml
<CustomField>
    <fullName>Additional_Type__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <label>Additional Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Support</fullName>
            </value>
            <value>
                <fullName>Bug Report &amp; Feature</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Customer Feedback (NPS)</fullName>
            </value>
            <value>
                <fullName>Customer Update &amp; Details</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Join / KYC</fullName>
            </value>
            <value>
                <fullName>My Security</fullName>
            </value>
            <value>
                <fullName>Other Enquiries</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Transaction &amp; Savings enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>