force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Field used to capture Address details from the customer for BPAY Dispute Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>