force-app/main/default/objects/Case/fields/AddressURL__c.field-meta.xml
<CustomField>
    <fullName>AddressURL__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer Address Proposed by Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address URL</label>
    <type>Url</type>
</CustomField>