force-app/main/default/objects/Case/fields/Advocacy_Score__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Score__c</fullName>
    <complianceGroup>Source_Qualtrics;Privacy - Non Personal Information;Integrity - Trusted</complianceGroup>
    <description>The numeric response to the NPS question. Blanks accepted</description>
    <label>Advocacy Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>