force-app/main/default/objects/Case/fields/Aegis_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Aegis_Workflow_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Aegis workflow Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aegis Workflow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>