force-app/main/default/objects/Case/fields/AFCA_Stage__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Stage__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Capture AFCA stage</description>
    <label>AFCA Stage and Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management Level 1</fullName>
            </value>
            <value>
                <fullName>Case Management Level 2</fullName>
            </value>
            <value>
                <fullName>Confirm Resolution With Complainant</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Fast Track - Case Management Level 1</fullName>
            </value>
            <value>
                <fullName>Fast Track - Decision</fullName>
            </value>
            <value>
                <fullName>Fast Track - Preliminary View</fullName>
            </value>
            <value>
                <fullName>Preliminary View</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Rules Review</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Referral/Registration</fullName>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Fast track Case Management</fullName>
            </value>
            <value>
                <fullName>Fast track decision</fullName>
            </value>
            <value>
                <fullName>Standard/complex case management</fullName>
            </value>
            <value>
                <fullName>Standard/complex decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>