force-app/main/default/objects/Case/fields/Alerting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Alerting_Reason__c</fullName>
    <complianceGroup>Source_Qualtrics;Privacy - Non Personal Information;Integrity - Trusted</complianceGroup>
    <description>Alerting reason is the rule describing the response needing customer contact e.g. Detractor 0-4</description>
    <label>Alerting Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>