force-app/main/default/objects/Case/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <description>Credit or debit transaction amount</description>
    <inlineHelpText>Credit or debit transaction amount</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>