force-app/main/default/objects/Case/fields/Amount_Of_Authorised_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Authorised_Transaction__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Trusted</complianceGroup>
    <description>Expected amount which should have been debited from customer&apos;s account</description>
    <inlineHelpText>The expected amount which should have been debited from customer&apos;s account.
 
Only applicable for dispute reasons:
·         Purchase was charged more than once
·         Purchase was charged incorrectly</inlineHelpText>
    <label>Amount Of Authorised Transaction</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>