force-app/main/default/objects/Case/fields/Amount_Of_Credit_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Credit_Due__c</fullName>
    <complianceGroup>Source_Salesforce;Privacy - Personal Information;Integrity - Accurate</complianceGroup>
    <description>Amount which the merchant owes to the customer</description>
    <inlineHelpText>The pending amount which the merchant owes to the customer.
 
Only applicable for dispute reason:
·         Credit has not been processed or processed incorrectly</inlineHelpText>
    <label>Amount Of Credit Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>