force-app/main/default/objects/Case/fields/ANZx_Customer__c.field-meta.xml
<CustomField>
    <fullName>ANZx_Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to display if case is ANZx related.</description>
    <label>ANZx Customer</label>
    <type>Checkbox</type>
</CustomField>