force-app/main/default/objects/Case/fields/ANZx_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>ANZx_Customer_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>The ANZx_Customer__c field from the Account record</description>
    <formula>Account.ANZx_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ANZ Plus Customer</label>
    <type>Checkbox</type>
</CustomField>