force-app/main/default/objects/Case/fields/ANZx_Product__c.field-meta.xml
<CustomField>
    <fullName>ANZx_Product__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>The ANZ Plus product or service that this complaint relates to.</description>
    <label>ANZ Plus Product or Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ Money - Everyday Account</fullName>
            </value>
            <value>
                <fullName>ANZ Save - Savings Account</fullName>
            </value>
            <value>
                <fullName>Not Product Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>