force-app/main/default/objects/Case/fields/API_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Sub_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field will populate the value from the Sub_Status__c</description>
    <formula>Text(Sub_Status__c)</formula>
    <label>API Sub Status</label>
    <type>Text</type>
</CustomField>