force-app/main/default/objects/Case/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Status of the loan application</description>
    <formula>CASE(TEXT(Loan_Application__r.Status),
&quot;STATE_UNSPECIFIED&quot; , &quot;Unspecified&quot;,
&quot;STATE_CAPTURE&quot;,&quot;Capture&quot;,
&quot;STATE_APPROVED&quot;,&quot;Approved&quot;,
&quot;STATE_DECLINED&quot;,&quot;Declined&quot;,
&quot;STATE_REFERRED&quot;,&quot;Referred&quot;,
&quot;STATE_COMPLETED&quot;,&quot;Completed&quot;,
&quot;STATE_CANCELLED&quot;,&quot;Cancelled&quot;,
&quot;STATE_EXPIRED&quot;,&quot;Expired&quot;,
&quot;STATE_SUBMITTED&quot;,&quot;Submitted&quot;,
&quot;STATE_CONFIRMED&quot;,&quot;Confirmed&quot;,
&quot;STATE_INELIGIBLE&quot;,&quot;Ineligible&quot;,
&quot;STATE_SETTLEMENT_INITATED&quot;,&quot;Settlement Initiated&quot;,
TEXT(Loan_Application__r.Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>