force-app/main/default/objects/Case/fields/Assessment_Id__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Id of the latest assessment. Needed while finalising the assessment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>