force-app/main/default/objects/Case/fields/Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Outcome of the latest assessment</description>
    <label>Assessment Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>