force-app/main/default/objects/Case/fields/Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This will indicate whether a case was automatically created. All automations have to set this field to &apos;true&apos;.</description>
    <inlineHelpText>Indicates if the Case was created via an automation.</inlineHelpText>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>