force-app/main/default/objects/Case/fields/Auto_matched_Chat_Topic_IDs__c.field-meta.xml
<CustomField>
    <fullName>Auto_matched_Chat_Topic_IDs__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>List of &apos;|&apos; separated IDs of auto-matched Chat Topics that are possibly related to this Case. Populated by &apos;New&apos; Case button override logic, while trying to auto-link a Chat Topic to a Case. This will be helpful in troubleshooting activities to understand why Chat - Case auto-link might not have happened. This will only be populated in the extremely rare case where a customer might have more than one active Chat session at the same time.</description>
    <inlineHelpText>List of &apos;|&apos; separated IDs of auto-matched Chat Topics that are possibly related to this Case. This will be helpful in troubleshooting activities to understand why Chat - Case auto-link might not have happened.</inlineHelpText>
    <label>Auto-matched Chat Topic IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>