force-app/main/default/objects/Case/fields/AuxDomId__c.field-meta.xml
<CustomField>
    <fullName>AuxDomId__c</fullName>
    <complianceGroup>Integrity_Trusted;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Each merchant will have a unique identification code. When a customer has multiple direct debits set up to their account, this debit user ID will help them identify which merchant has debited them and if debited with an incorrect amount or unknown to them, it helps them report it accordingly</description>
    <inlineHelpText>Merchant unique identification number</inlineHelpText>
    <label>AuxDomId</label>
    <length>11</length>
    <type>Text</type>
</CustomField>