force-app/main/default/objects/Case/fields/Bank_ATM__c.field-meta.xml
<CustomField>
    <fullName>Bank_ATM__c</fullName>
    <complianceGroup>Integrity_Trusted;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <description>Name of the Bank which the ATM belongs to.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Bank ATM details</inlineHelpText>
    <label>Bank ATM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>