force-app/main/default/objects/Case/fields/Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>Biller_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Biller Code which identifies the biller to which the payment is made.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Biller Code of the Biller used in the BPAY payment.</inlineHelpText>
    <label>Biller Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>