force-app/main/default/objects/Case/fields/Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Biller_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Name of the Merchant or Organisation to which the BPAY Payment is made.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Biller Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>