force-app/main/default/objects/Case/fields/BOH_Fraud_Case__c.field-meta.xml
<CustomField>
    <fullName>BOH_Fraud_Case__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if the fraud case being created is for BOH. Used in trigger to help identify cases.</description>
    <label>BOH Fraud Case</label>
    <type>Checkbox</type>
</CustomField>