force-app/main/default/objects/Case/fields/Broker_Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Call_Back_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Broker enquiry call back number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Call Back Number</label>
    <type>Phone</type>
</CustomField>