force-app/main/default/objects/Case/fields/CAC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CAC_Sub_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field is part of Complaint about Complaints used in CMOS</description>
    <label>CAC Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit file delay</fullName>
            </value>
            <value>
                <fullName>No resolution on original complaint</fullName>
            </value>
            <value>
                <fullName>Resolution considered unsuitable</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Solution not implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>