force-app/main/default/objects/Case/fields/CAD_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CAD_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field allows the user to select whether the case decision has been overturned,
        upheld, enhanced or is a commercial decision.</description>
    <inlineHelpText>This field should only be updated by Customer Resolution (CR) if the CAD outcome
        has changed for a complaint related to financial difficulty &amp; hardship, collections or
        credit reporting.</inlineHelpText>
    <label>CAD Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Upheld</fullName>
            </value>
            <value>
                <fullName>Decision Enhanced</fullName>
            </value>
            <value>
                <fullName>Decision Overturned</fullName>
            </value>
            <value>
                <fullName>Commercial Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>