force-app/main/default/objects/Case/fields/Campaign_flag__c.field-meta.xml
<CustomField>
    <fullName>Campaign_flag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>The Campaign Flag is used for indicating whether or not a Coach has discussed a current campaign with a customer</description>
    <label>Campaign</label>
    <type>Checkbox</type>
</CustomField>