force-app/main/default/objects/Case/fields/Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <description>Card expiry date</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Enter the 4 digit expiry date MMYY</inlineHelpText>
    <label>Card Expiry Date</label>
    <length>4</length>
    <type>Text</type>
</CustomField>