force-app/main/default/objects/Case/fields/Card_In_Possession_During_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Card_In_Possession_During_Transaction__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <description>To check whether the card was in possession of the customer during the time of transaction</description>
    <inlineHelpText>Only applicable for dispute reasons:
·         Cardholder does not recognise transaction
·         Cardholder did not authorise transaction (Fraud)
·         Additional transactions for an existing lost/stolen/fraud case</inlineHelpText>
    <label>Card In Possession During Transaction?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>