force-app/main/default/objects/Case/fields/Card_Method__c.field-meta.xml
<CustomField>
    <fullName>Card_Method__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>How the card was used</description>
    <label>Card Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>