force-app/main/default/objects/Case/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <complianceGroup>Source - Salesforce;Integrity - Accurate;Privacy - Personal Information</complianceGroup>
    <description>Card details of the customer</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Last 4 digits of card used</inlineHelpText>
    <label>Card Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>