force-app/main/default/objects/Case/fields/Card_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Card_Scheme__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Who facilitated the transaction e.g VISA, EFTPOS, Mastercard</description>
    <label>Card Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>OTHER</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>VISA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MASTERCARD</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>EFTPOS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>AMERICAN_EXPRESS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>