force-app/main/default/objects/Case/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <label>Card Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>