force-app/main/default/objects/Case/fields/Card_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Token_Number__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Trusted;Source - Fabric</complianceGroup>
    <description>Tokenised number of the credit card as per ANZ data policies</description>
    <label>Card Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>