force-app/main/default/objects/Case/fields/CardScamType__c.field-meta.xml
<CustomField>
    <fullName>CardScamType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Captures the type of card scam/fraudulent activity related to the cards.</description>
    <label>Card Scam Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsAScam__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dating &amp; Romance</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Remote Access</fullName>
            </value>
            <value>
                <fullName>Threats &amp; Extortion</fullName>
            </value>
            <value>
                <fullName>Fake Charity</fullName>
            </value>
            <value>
                <fullName>Jobs &amp; Employment</fullName>
            </value>
            <value>
                <fullName>Unexpected Money/winnings</fullName>
            </value>
            <value>
                <fullName>Bank Impersonation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>