force-app/main/default/objects/Case/fields/Case_Age_in_Days__c.field-meta.xml
<CustomField>
   <fullName>Case_Age_in_Days__c</fullName>
   <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
   <description>Age of the case (in days) since e.g. it was first identified by ANZ.</description>
   <formula>CASE(RecordType.DeveloperName,&apos;Systemic_Issue&apos;, IF( TEXT(Status)=&apos;Closed&apos;, DATEVALUE(ClosedDate) - SI_First_Identified_Date__c, TODAY() - SI_First_Identified_Date__c),&apos;Customer_Complaint&apos;, TODAY() -  DATEVALUE(IDR_Date_Received__c),&apos;Non_Customer_Complaint&apos;, TODAY() -  DATEVALUE(IDR_Date_Received__c),TODAY() - DATEVALUE(CreatedDate))</formula>
   <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
   <label>Age in days</label>
   <precision>18</precision>
   <scale>0</scale>
   <type>Number</type>
</CustomField>