force-app/main/default/objects/Case/fields/Case_Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Case_Authority_Level__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>Authority level required to handle the credit referral</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the minimum authority level you need to resolve this credit referral case.</inlineHelpText>
    <label>Case Authority Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>