force-app/main/default/objects/Case/fields/Case_Hour_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Hour_Duration__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Trusted</complianceGroup>
    <description>Indicates the number of hours a case was open for, is only populated on case closure</description>
    <label>Resolution Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>