force-app/main/default/objects/Case/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <description>Case Number, copied on insertion. Useful if we had to restore as the standard field is an auto-number.</description>
    <externalId>true</externalId>
    <label>Original Case Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>