force-app/main/default/objects/Case/fields/CaseOwnerManager__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerManager__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Field to get ManagerId of the Case Owner.</description>
    <formula>Owner:User.ManagerId</formula>
    <label>CaseOwnerManager</label>
    <type>Text</type>
</CustomField>