force-app/main/default/objects/Case/fields/CertificateIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CertificateIdentifier__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Customer Certificate Number Tokenised and stored in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Certificate Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>